Closed Bug 1688535 Opened 3 years ago Closed 3 years ago

widget-supplied minimum sizes for scrollbars aren't accurate

Categories

(Core :: Widget, defect)

defect

Tracking

()

RESOLVED FIXED
87 Branch
Fission Milestone M7
Tracking Status
firefox87 --- fixed

People

(Reporter: heycam, Assigned: heycam)

References

Details

Attachments

(1 file)

For Linux, at least, we the scrollbar minimum size should be the same as the slider/thumb minimum size.

For Windows, we should at least fix the problem where a very short scrollable element shows scrollbars that overflow their parent (due to needing to show the two arrow buttons plus the thumb).

Ideally we'd do something more clever, like on Windows how the thumb disappears if the available size is small enough to allow the arrow buttons but not the thumb. And even more ideally, we'd handle rendering scrollbars at any size, by scaling down the buttons or something.

This is needed to fix /css/css-overflow/clip-003.html, at least, where we end up making different choices about which scrollbars can fit: https://hg.mozilla.org/mozilla-central/raw-file/tip/layout/tools/reftest/reftest-analyzer.xhtml#logurl=https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/a6Wy8YkdQtC_i2v2gVhETA/runs/0/artifacts/public/logs/live_backing.log&only_show_unexpected=1

On Linux, the <scrollbar> minimum size must take into account the
minimum track size (which is larger than the general minimum widget
size).

On other platforms, the scrollbar buttons must also be taken into
account.

Assignee: nobody → cam
Status: NEW → ASSIGNED
Fission Milestone: --- → M7
Pushed by cmccormack@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/e0c94e7af778
Make non-native theme <scrollbar> minimum sizes take into account track size and buttons. r=emilio
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 87 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: