Bug 1688535 - Make non-native theme <scrollbar> minimum sizes take into account track size and buttons. r=emilio

On Linux, the <scrollbar> minimum size must take into account the
minimum track size (which is larger than the general minimum widget
size).

On other platforms, the scrollbar buttons must also be taken into
account.

Differential Revision: https://phabricator.services.mozilla.com/D102885