widget/nsNativeBasicTheme.cpp
@@ -6,6 +6,7 @@
 #include "nsNativeBasicTheme.h"
 
 #include "gfxBlur.h"
+#include "mozilla/MathAlgorithms.h"
 #include "mozilla/dom/Document.h"
 #include "mozilla/gfx/Rect.h"
 #include "mozilla/gfx/Types.h"
@@ -1388,6 +1389,11 @@ bool nsNativeBasicTheme::GetWidgetPadding(nsDeviceContext* aContext,
   return false;
 }
 
+static int GetScrollbarButtonCount() {
+  int32_t buttons = LookAndFeel::GetInt(LookAndFeel::IntID::ScrollArrowStyle);
+  return CountPopulation32(static_cast<uint32_t>(buttons));
+}
+
 bool nsNativeBasicTheme::GetWidgetOverflow(nsDeviceContext* aContext,
                                            nsIFrame* aFrame,
                                            StyleAppearance aAppearance,
@@ -1481,6 +1487,24 @@ nsNativeBasicTheme::GetMinimumWidgetSize(nsPresContext* aPresContext,
       } else {
         aResult->SizeTo((kMinimumScrollbarSize * dpiRatio).Rounded(),
                         (kMinimumScrollbarSize * dpiRatio).Rounded());
+
+        // If the scrollbar has any buttons, then we increase the minimum
+        // size so that they fit too.
+        //
+        // FIXME(heycam): We should probably ensure that the thumb disappears
+        // if a scrollbar is big enough to fit the buttons but not the thumb,
+        // which is what the Windows native theme does.  If we do that, then
+        // the minimum size here needs to be reduced accordingly.
+        switch (aAppearance) {
+          case StyleAppearance::ScrollbarHorizontal:
+            aResult->width *= GetScrollbarButtonCount() + 1;
+            break;
+          case StyleAppearance::ScrollbarVertical:
+            aResult->height *= GetScrollbarButtonCount() + 1;
+            break;
+          default:
+            break;
+        }
       }
       break;
     }
